# check-ssh-key

./: check_ssh_key.c  configure.ac
